--- a/src/Resources/app/administration/src/extension/sw-cms-section/template.html.twig
+++ b/src/Resources/app/administration/src/extension/sw-cms-section/template.html.twig
@@ -2,6 +2,7 @@
 {% block sw_cms_section_content %}
     <template v-if="section.type === 'blur-elysium-section'">
         <blur-elysium-cms-section 
+            @on-add-block="openBlockBar"
             :section="section" />
     </template>
     <template v-else>
