--- a/src/Resources/app/administration/src/component/cms/section/add-block/template.html.twig
+++ b/src/Resources/app/administration/src/component/cms/section/add-block/template.html.twig
@@ -1,3 +1,8 @@
-<div :style="styles">
+<div 
+    class="blur-elysium-section-add-block"
+    :style="styles"
+    @click="$emit('click')">
+    
+    <mt-icon name="regular-plus-circle" />
     Add
 </div>
