--- a/src/Resources/app/administration/src/component/cms/section/settings/template.html.twig
+++ b/src/Resources/app/administration/src/component/cms/section/settings/template.html.twig
@@ -2,7 +2,7 @@
 
     <blur-column>
         <blur-number-input 
-            :label="'Section gap'"
+            :label="'Gap'"
             :device="currentDevice"
             :placeholder="viewportsPlaceholder('gridGap', 20)"
             :show-device="true"
@@ -10,7 +10,45 @@
             v-model:value="currentViewportSettings.gridGap" /> 
     </blur-column>
 
+    <blur-column
+        :cols-tablet="6">
+
+        <blur-number-input 
+            :label="'Padding Y'"
+            :device="currentDevice"
+            :placeholder="viewportsPlaceholder('paddingY', 0)"
+            :show-device="true"
+            @on-device="deviceSwitch"
+            v-model:value="currentViewportSettings.paddingY" /> 
+    </blur-column>
+
+    <blur-column
+        :cols-tablet="6">
+
+        <blur-number-input 
+            :label="'Padding X'"
+            :device="currentDevice"
+            :placeholder="viewportsPlaceholder('paddingX', 0)"
+            :show-device="true"
+            @on-device="deviceSwitch"
+            v-model:value="currentViewportSettings.paddingX" /> 
+    </blur-column>
+
+    <blur-column>
+
+        <blur-select-input 
+            :label="'Align Blocks'" 
+            :placeholder="viewportsPlaceholder('alignItems', 'stretch', 'blurElysium.general.alignItems')"
+            :options="[
+                { value: 'stretch', label: $tc('blurElysium.general.alignItems.stretch') },
+                { value: 'flex-start', label: $tc('blurElysium.general.alignItems.flexStart') },
+                { value: 'center', label: $tc('blurElysium.general.alignItems.center') },
+                { value: 'flex-end', label: $tc('blurElysium.general.flexEnd') },
+            ]"
+            :device="deviceView"
+            :show-device="true"
+            @on-device="deviceSwitch"
+            v-model:value="currentViewportSettings.alignItems" />
+    </blur-column>
+
 </blur-section>
-    <pre>
-    {{currentViewportSettings}}
-    </pre>
