--- a/src/Resources/app/administration/src/component/cms/section/style.scss
+++ b/src/Resources/app/administration/src/component/cms/section/style.scss
@@ -25,8 +25,7 @@
     text-align: center;
     font-size: 20px;
     font-weight: 600;
-    background-color: rgba(255, 255, 255, 0.25);
-    backdrop-filter: blur(10px);
+    background-color: #f9fafb;
     opacity: 0;
     visibility: hidden;
     transition: all 200ms;
