implement elysium-section wide breakpoints

--- a/src/Resources/app/administration/src/component/cms/section/template.html.twig
+++ b/src/Resources/app/administration/src/component/cms/section/template.html.twig
@@ -7,6 +7,7 @@
         v-droppable="{ dragGroup: 'cms-stage', data: getDropData(0), onDrop: block => dropBlock(block, 0) }" />
 
     <div :style="gridStyle"
+        v-if="section.blocks.length > 0"
         ref="elysiumectionGrid"
         @dragover.prevent 
         @drop="onGridDrop">
