--- a/src/Resources/app/administration/src/component/cms/section/settings/template.html.twig
+++ b/src/Resources/app/administration/src/component/cms/section/settings/template.html.twig
@@ -1,5 +1,10 @@
-<blur-section padding gap>
-    <blur-column>
+<blur-section padding gap
+    :style="{
+        borderBottom: '1px solid #d1d9e0',
+    }">
+
+    <blur-column
+        :cols-tablet="6">
 
         <blur-select-input 
             :label="$tc('blurElysium.general.blockAlignment')" 
@@ -16,7 +21,8 @@
             v-model:value="currentViewportSettings.alignItems" />
     </blur-column>
 
-    <blur-column>
+    <blur-column
+        :cols-tablet="6">
 
         <blur-number-input 
             :label="$tc('blurElysium.general.gap')"
@@ -51,5 +57,32 @@
             v-model:value="currentViewportSettings.paddingX" /> 
     </blur-column>
 
+</blur-section>
+
+<blur-section padding gap
+    :title="$tc('blurElysiumSection.sidebar.sectionSettings.breakpoints.title')"
+    :description="$tc('blurElysiumSection.sidebar.sectionSettings.breakpoints.description')">
+
+    <blur-column
+        :cols-tablet="6">
+
+        <blur-select-input 
+            :helpText="$tc('blurElysiumSection.sidebar.sectionSettings.breakpoints.tabletHelptext')"
+            :label="'Tablet'"
+            :placeholder="'md'"
+            :options="optionsBreakpoints"
+            v-model:value="settings.breakpoints.tablet" /> 
+    </blur-column>
+
+    <blur-column
+        :cols-tablet="6">
+
+        <blur-select-input 
+            :helpText="$tc('blurElysiumSection.sidebar.sectionSettings.breakpoints.desktopHelptext')"
+            :label="'Desktop'"
+            :placeholder="'xl'"
+            :options="optionsBreakpoints"
+            v-model:value="settings.breakpoints.desktop" /> 
+    </blur-column>
 
 </blur-section>
