--- a/src/Resources/app/administration/src/extension/sw-cms-stage-section-selection/template.html.twig
+++ b/src/Resources/app/administration/src/extension/sw-cms-stage-section-selection/template.html.twig
@@ -17,7 +17,7 @@
                         'blur-elysium-section-preview-canvas'
                     ]">
                     <blur-elysium-icon 
-                        color="#999999" />
+                        color="#52667a" />
                 </div>
             </div>
             
