--- a/src/Resources/app/administration/src/styles/components.scss
+++ b/src/Resources/app/administration/src/styles/components.scss
@@ -185,6 +185,10 @@
         padding: 8px 0;
         min-width: auto;
     }
+
+    .mt-select__selection-indicators {
+        right: 8px;
+    }
 }
 
 /** Colorpicker styling */
