--- a/src/Resources/views/storefront/section/cms-section-blur-elysium-section.html.twig
+++ b/src/Resources/views/storefront/section/cms-section-blur-elysium-section.html.twig
@@ -6,6 +6,11 @@
     'padding: var(--elysium-section-py, 0px) var(--elysium-section-px, 0px)',
     'align-items: var(--elysium-section-align-items, stretch)',
 ] %}
+{% set blurElysiumSectionBreakpoints = {
+    mobile: 'xs',
+    tablet: section.customFields.elysiumSectionSettings.breakpoints.tablet ?? 'md',
+    desktop: section.customFields.elysiumSectionSettings.breakpoints.desktop ?? 'xl'
+} %}
 
 {% block cms_blur_elysium_section_container %}
     <div class="cms-section-container {% if section.sizingMode is same as('boxed') %}container{% else %}container-fluid{% endif %}">
@@ -13,7 +18,7 @@
         {%- if section.customFields.elysiumSectionSettings.viewports %}
             <style>
                 {% for device, options in section.customFields.elysiumSectionSettings.viewports %}
-                    @media (min-width: {{ theme_config('breakpoint.' ~ blurElysiumBreakpoints[device])~'px' }}) {
+                    @media (min-width: {{ theme_config('breakpoint.' ~ blurElysiumSectionBreakpoints[device])~'px' }}) {
                         .blur-elysium-section-grid[data-cms-section-id="{{section.id}}"] {
                             {% if options.gridGap %}
                                 --elysium-section-gap: {{ options.gridGap ~ 'px' }};
@@ -58,7 +63,7 @@
                             {%- if block.customFields.elysiumBlockSettings.viewports %}
                                 <style>
                                     {% for device, options in block.customFields.elysiumBlockSettings.viewports %}
-                                        @media (min-width: {{ theme_config('breakpoint.' ~ blurElysiumBreakpoints[device])~'px' }}) {
+                                        @media (min-width: {{ theme_config('breakpoint.' ~ blurElysiumSectionBreakpoints[device])~'px' }}) {
                                             .blur-elysium-section-block[data-cms-block-id="{{block.id}}"] {
                                                 --elysium-section-block-col-end: span {{ options.colEnd }};
                                             }
