--- a/src/Resources/app/administration/src/component/cms/section/style.scss
+++ b/src/Resources/app/administration/src/component/cms/section/style.scss
@@ -24,7 +24,7 @@
     padding: 20px;
     text-align: center;
     color: var(--color-interaction-primary-default);
-    background-color: rgba(217, 233, 255, 0.75);
+    background-color: var(--color-shopware-brand-50);
     backdrop-filter: blur(8px);
     opacity: 0;
     visibility: hidden;
