improve drag block sizing

--- a/src/Resources/app/administration/src/component/cms/section/template.html.twig
+++ b/src/Resources/app/administration/src/component/cms/section/template.html.twig
@@ -10,7 +10,7 @@
         class="blur-elysium-section-grid"
         :style="gridStyle"
         v-if="section.blocks.length > 0"
-        ref="elysiumectionGrid"
+        ref="elysiumSectionGrid"
         @dragover.prevent 
         @drop="onGridDrop">
 
