--- a/src/Resources/app/administration/src/component/cms/section/block-settings/template.html.twig
+++ b/src/Resources/app/administration/src/component/cms/section/block-settings/template.html.twig
@@ -10,6 +10,7 @@
             :min="1"
             :step="1"
             :max="100"
+            :unit="false"
             :device="currentDevice"
             @on-device="cmsDeviceSwitch"
             v-model:value="currentViewportSettings.order" /> 
@@ -26,6 +27,7 @@
             :min="1"
             :step="1"
             :max="100"
+            :unit="false"
             :device="currentDevice"
             @on-device="cmsDeviceSwitch"
             v-model:value="currentViewportSettings.rowEnd" /> 
