--- a/src/Resources/app/administration/src/component/cms/section/template.html.twig
+++ b/src/Resources/app/administration/src/component/cms/section/template.html.twig
@@ -32,10 +32,9 @@
                 v-droppable="{ dragGroup: 'cms-stage', data: getDropData(index + 1), onDrop: block => dropBlock(block, index + 1) }"
                 @block-overlay-click="onBlockSelection(block)">
             
-
                 <div class="blur-elysium-section-block-dropper">
                     <mt-icon name="regular-plus-circle" />
-                    Zum hinzufügen hier platzieren
+                    Zum anfügen hier platzieren
                 </div>
 
                 <div class="blur-elysium-section-block-resizer" 
