fixed changed slide states

--- a/src/Resources/app/administration/src/component/slides/form/container/template.html.twig
+++ b/src/Resources/app/administration/src/component/slides/form/container/template.html.twig
@@ -25,7 +25,7 @@
                     :label="$tc('blurElysiumSlides.forms.slideContentOrder.label')"
                     :helpText="$tc('blurElysiumSlides.forms.slideContentOrder.helpText')"
                     :placeholder="devicePlaceholder('container.order', 'default', 'blurElysiumSlides.forms.slideContentOrder')"
-                    :device="deviceView"
+                    :device="currentDevice"
                     :show-device="true"
                     :options="[
                         {value: 'default', label: $tc('blurElysiumSlides.forms.slideContentOrder.default') },
@@ -41,7 +41,7 @@
 
                 <blur-number-input 
                     :label="$tc('blurElysiumSlides.forms.slideWidth.label')"
-                    :device="deviceView"
+                    :device="currentDevice"
                     :placeholder="devicePlaceholder('container.maxWidth', $t('blurElysium.general.noLimit'))"
                     :show-device="true"
                     @on-device="deviceSwitch"
@@ -77,7 +77,7 @@
 
                 <blur-number-input  
                     :label="$tc('blurElysium.general.paddingX')"
-                    :device="deviceView"
+                    :device="currentDevice"
                     :placeholder="devicePlaceholder('container.paddingX', 15)"
                     :show-device="true"
                     @on-device="deviceSwitch"
@@ -90,7 +90,7 @@
 
                 <blur-number-input       
                     :label="$tc('blurElysium.general.paddingY')"
-                    :device="deviceView"
+                    :device="currentDevice"
                     :placeholder="devicePlaceholder('container.paddingY', 15)"
                     :show-device="true"
                     @on-device="deviceSwitch"
@@ -103,7 +103,7 @@
 
                 <blur-number-input 
                     :label="$tc('blurElysium.general.gap')"
-                    :device="deviceView"
+                    :device="currentDevice"
                     :placeholder="devicePlaceholder('container.gap', 20)"
                     :show-device="true"
                     @on-device="deviceSwitch"
@@ -116,7 +116,7 @@
 
                 <blur-number-input 
                     :label="$tc('blurElysium.general.borderRadius')"
-                    :device="deviceView"
+                    :device="currentDevice"
                     :placeholder="devicePlaceholder('container.borderRadius', 0)"
                     :show-device="true"
                     @on-device="deviceSwitch"
@@ -141,7 +141,7 @@
                 <blur-select-input 
                     :label="$tc('blurElysium.general.jusitifyContent')" 
                     :placeholder="devicePlaceholder('container.justifyContent', 'normal', 'blurElysium.general')"
-                    :device="deviceView"
+                    :device="currentDevice"
                     :show-device="true"
                     :options="[
                         { value: 'normal', label: $tc('blurElysium.general.jusitifyNormal') },
@@ -163,7 +163,7 @@
                 <blur-select-input 
                     :label="$tc('blurElysium.general.alignItems')" 
                     :placeholder="devicePlaceholder('container.alignItems', 'center', 'blurElysium.general')"
-                    :device="deviceView"
+                    :device="currentDevice"
                     :show-device="true"
                     :options="[
                         { value: 'flex-start', label: $tc('blurElysium.general.alignStart') },
