--- a/src/Resources/app/administration/src/component/slides/form/content/template.html.twig
+++ b/src/Resources/app/administration/src/component/slides/form/content/template.html.twig
@@ -13,7 +13,7 @@
 
                 <blur-number-input 
                     :label="$tc('blurElysiumSlides.forms.slideWidth.label')"
-                    :device="deviceView"
+                    :device="currentDevice"
                     :placeholder="devicePlaceholder('content.maxWidth', $t('blurElysium.general.noLimit'))"
                     :show-device="true"
                     @on-device="deviceSwitch"
@@ -41,7 +41,7 @@
 
                 <blur-number-input 
                     :label="$tc('blurElysium.general.paddingX')"
-                    :device="deviceView"
+                    :device="currentDevice"
                     :placeholder="devicePlaceholder('content.paddingX', 15)"
                     :show-device="true"
                     @on-device="deviceSwitch"
@@ -54,7 +54,7 @@
 
                 <blur-number-input 
                     :label="$tc('blurElysium.general.paddingY')"
-                    :device="deviceView"
+                    :device="currentDevice"
                     :placeholder="devicePlaceholder('content.paddingY', 0)"
                     :show-device="true"
                     @on-device="deviceSwitch"
@@ -79,7 +79,7 @@
                 <blur-select-input 
                     :label="$tc('blurElysium.general.textAlign')" 
                     :placeholder="devicePlaceholder('content.textAlign', 'left', 'blurElysium.general')"
-                    :device="deviceView"
+                    :device="currentDevice"
                     :show-device="true"
                     :options="[
                         { value: 'left', label: $tc('blurElysium.general.left') },
