--- a/src/Resources/app/administration/src/component/slides/form/slide/template.html.twig
+++ b/src/Resources/app/administration/src/component/slides/form/slide/template.html.twig
@@ -96,7 +96,7 @@
 
                 <blur-number-input 
                     :label="$tc('blurElysium.general.paddingX')"
-                    :device="deviceView"
+                    :device="currentDevice"
                     :placeholder="devicePlaceholder('slide.paddingX', 15)"
                     :show-device="true"
                     @on-device="deviceSwitch"
@@ -109,7 +109,7 @@
 
                 <blur-number-input 
                     :label="$tc('blurElysium.general.paddingY')"
-                    :device="deviceView"
+                    :device="currentDevice"
                     :placeholder="devicePlaceholder('slide.paddingY', 15)"
                     :show-device="true"
                     @on-device="deviceSwitch"
@@ -122,7 +122,7 @@
 
                 <blur-number-input 
                     :label="$tc('blurElysium.general.borderRadius')"
-                    :device="deviceView"
+                    :device="currentDevice"
                     :placeholder="devicePlaceholder('slide.borderRadius', 0)"
                     :show-device="true"
                     @on-device="deviceSwitch"
@@ -147,7 +147,7 @@
                 <blur-select-input 
                     :label="$tc('blurElysium.general.alignX.label')" 
                     :placeholder="devicePlaceholder('slide.justifyContent', 'center', 'blurElysium.general.alignX')"
-                    :device="deviceView"
+                    :device="currentDevice"
                     :show-device="true"
                     :options="[
                         { value: 'flex-start', label: $tc('blurElysium.general.alignX.flexStart') },
@@ -165,7 +165,7 @@
                 <blur-select-input 
                     :label="$tc('blurElysium.general.alignY.label')" 
                     :placeholder="devicePlaceholder('slide.alignItems', 'center', 'blurElysium.general.alignY')"
-                    :device="deviceView"
+                    :device="currentDevice"
                     :show-device="true"
                     :options="[
                         { value: 'flex-start', label: $tc('blurElysium.general.top') },
