--- a/src/Resources/app/administration/src/component/slides/section/display/template.html.twig
+++ b/src/Resources/app/administration/src/component/slides/section/display/template.html.twig
@@ -9,7 +9,7 @@
         <blur-device-switch 
             layout="row"
             show-label="false"
-            :default-viewport="deviceView"
+            :default-viewport="currentDevice"
             :style="{
                 padding: '0',
                 width: '100%',
